# sanri

./: .dockerignore  .env.example  .gitignore  Dockerfile  docker-compose.yml  entrypoint.sh  gunicorn.conf.py  manage.py  nginx.conf  package.json  pyproject.toml  requirements.txt
.circleci/: config.yml  deploy.sh
apps/auction/: models.py  serializers.py  urls.py  views.py
apps/authorization/: .serializers.py.swo  .serializers.py.swp  admin.py  apps.py  filters.py  managers.py  model_helpers.py  models.py  serializers.py  signals.py  urls.py  views.py
apps/car_model/: admin.py  apps.py  filters.py  models.py  serializers.py  urls.py  views.py
apps/car_order/: admin.py  apps.py  filters.py  formulas.py  models.py  serializers.py  signals.py  urls.py  views.py
apps/car_resale/: admin.py  apps.py  filters.py  models.py  serializers.py  signals.py  urls.py  views.py
apps/car_sale/: admin.py  apps.py  formulas.py  models.py  serializers.py  signals.py  urls.py  views.py
apps/car_store/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
apps/client/: serializers.py  urls.py  views.py
apps/container/: .serializers.py.swp  admin.py  apps.py  formulas.py  models.py  serializers.py  signals.py  urls.py  views.py
apps/file/: models.py  serializers.py  urls.py  views.py
apps/income/: admin.py  models.py  serializers.py  urls.py  views.py
apps/monthly_payment/: admin.py  apps.py  models.py  (+3 more)
public/: index.html
sanri/: .settings.py.swp  asgi.py  settings.py  urls.py  wsgi.py
services/: abstracts.py
utils/: cache.py  mixins.py  tests.py
(+251 files in other folders)
